// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MPaging Given a lot of pages Then should render correctly 1`] = `
<div class="m-paging">
  <div class="m-paging__status">Page 5 de 51</div>
  <div class="m-paging__nav"><button type="button" class="m-icon-button m-paging__previous-button m--is-skin-link m--has-ripple" style="width:44px;height:44px;font-size:20px;"><svg aria-hidden="true" width="1em" height="1em" class="m-icon m-icon-button__icon">
        <use aria-hidden="true"></use>
      </svg> </button>
    <ul class="m-paging__pages">
      <li class="m-paging__item"><a href="#" tabindex="0" class="m-link m-paging__item--link m--is-unvisited m--is-button"> <span class="m-link__text">1</span> </a></li>
      <li class="m-paging__item m-paging__item--ellipsis"><span class="m-paging__item--text">...</span></li>
      <li class="m-paging__item"><a href="#" tabindex="0" class="m-link m-paging__item--link m--is-unvisited m--is-button"> <span class="m-link__text">4</span> </a></li>
      <li class="m-paging__item"><span class="m-paging__item--text">5</span></li>
      <li class="m-paging__item"><a href="#" tabindex="0" class="m-link m-paging__item--link m--is-unvisited m--is-button"> <span class="m-link__text">6</span> </a></li>
      <li class="m-paging__item m-paging__item--ellipsis"><span class="m-paging__item--text">...</span></li>
      <li class="m-paging__item"><a href="#" tabindex="0" class="m-link m-paging__item--link m--is-unvisited m--is-button"> <span class="m-link__text">51</span> </a></li>
    </ul> <button type="button" class="m-icon-button m-paging__next-button m--is-skin-link m--has-ripple" style="width:44px;height:44px;font-size:20px;"><svg aria-hidden="true" width="1em" height="1em" class="m-icon m-icon-button__icon">
        <use aria-hidden="true"></use>
      </svg> </button>
  </div>
</div>
`;

exports[`MPaging Given a lot of pages Then the ellipsis should be displayed on both side 1`] = `
<div class="m-paging">
  <div class="m-paging__status">Page 5 de 51</div>
  <div class="m-paging__nav"><button type="button" class="m-icon-button m-paging__previous-button m--is-skin-link m--has-ripple" style="width:44px;height:44px;font-size:20px;"><svg aria-hidden="true" width="1em" height="1em" class="m-icon m-icon-button__icon">
        <use aria-hidden="true"></use>
      </svg> </button>
    <ul class="m-paging__pages">
      <li class="m-paging__item"><a href="#" tabindex="0" class="m-link m-paging__item--link m--is-unvisited m--is-button"> <span class="m-link__text">1</span> </a></li>
      <li class="m-paging__item m-paging__item--ellipsis"><span class="m-paging__item--text">...</span></li>
      <li class="m-paging__item"><a href="#" tabindex="0" class="m-link m-paging__item--link m--is-unvisited m--is-button"> <span class="m-link__text">4</span> </a></li>
      <li class="m-paging__item"><span class="m-paging__item--text">5</span></li>
      <li class="m-paging__item"><a href="#" tabindex="0" class="m-link m-paging__item--link m--is-unvisited m--is-button"> <span class="m-link__text">6</span> </a></li>
      <li class="m-paging__item m-paging__item--ellipsis"><span class="m-paging__item--text">...</span></li>
      <li class="m-paging__item"><a href="#" tabindex="0" class="m-link m-paging__item--link m--is-unvisited m--is-button"> <span class="m-link__text">51</span> </a></li>
    </ul> <button type="button" class="m-icon-button m-paging__next-button m--is-skin-link m--has-ripple" style="width:44px;height:44px;font-size:20px;"><svg aria-hidden="true" width="1em" height="1em" class="m-icon m-icon-button__icon">
        <use aria-hidden="true"></use>
      </svg> </button>
  </div>
</div>
`;

exports[`MPaging Given enough items to have more than 1 page Then should render correctly 1`] = `
<div class="m-paging">
  <div class="m-paging__status">Page 1 de 3</div>
  <div class="m-paging__nav"><button disabled="disabled" type="button" class="m-icon-button m-paging__previous-button m--is-skin-link m--has-ripple m--is-disabled" style="width:44px;height:44px;font-size:20px;"><svg aria-hidden="true" width="1em" height="1em" class="m-icon m-icon-button__icon">
        <use aria-hidden="true"></use>
      </svg> </button>
    <ul class="m-paging__pages">
      <li class="m-paging__item"><span class="m-paging__item--text">1</span></li>
      <li class="m-paging__item"><a href="#" tabindex="0" class="m-link m-paging__item--link m--is-unvisited m--is-button"> <span class="m-link__text">2</span> </a></li>
      <li class="m-paging__item"><a href="#" tabindex="0" class="m-link m-paging__item--link m--is-unvisited m--is-button"> <span class="m-link__text">3</span> </a></li>
    </ul> <button type="button" class="m-icon-button m-paging__next-button m--is-skin-link m--has-ripple" style="width:44px;height:44px;font-size:20px;"><svg aria-hidden="true" width="1em" height="1em" class="m-icon m-icon-button__icon">
        <use aria-hidden="true"></use>
      </svg> </button>
  </div>
</div>
`;

exports[`MPaging Given only 1 page of results Then should render correctly 1`] = `
<div class="m-paging">
  <div class="m-paging__status">Page 1 de 1</div>
</div>
`;

exports[`MPaging Given showing less item per page Then should render correctly 1`] = `
<div class="m-paging">
  <div class="m-paging__status">Page 1 de 10</div>
  <div class="m-paging__nav"><button disabled="disabled" type="button" class="m-icon-button m-paging__previous-button m--is-skin-link m--has-ripple m--is-disabled" style="width:44px;height:44px;font-size:20px;"><svg aria-hidden="true" width="1em" height="1em" class="m-icon m-icon-button__icon">
        <use aria-hidden="true"></use>
      </svg> </button>
    <ul class="m-paging__pages">
      <li class="m-paging__item"><span class="m-paging__item--text">1</span></li>
      <li class="m-paging__item"><a href="#" tabindex="0" class="m-link m-paging__item--link m--is-unvisited m--is-button"> <span class="m-link__text">2</span> </a></li>
      <li class="m-paging__item"><a href="#" tabindex="0" class="m-link m-paging__item--link m--is-unvisited m--is-button"> <span class="m-link__text">3</span> </a></li>
      <li class="m-paging__item"><a href="#" tabindex="0" class="m-link m-paging__item--link m--is-unvisited m--is-button"> <span class="m-link__text">4</span> </a></li>
      <li class="m-paging__item m-paging__item--ellipsis"><span class="m-paging__item--text">...</span></li>
      <li class="m-paging__item"><a href="#" tabindex="0" class="m-link m-paging__item--link m--is-unvisited m--is-button"> <span class="m-link__text">10</span> </a></li>
    </ul> <button type="button" class="m-icon-button m-paging__next-button m--is-skin-link m--has-ripple" style="width:44px;height:44px;font-size:20px;"><svg aria-hidden="true" width="1em" height="1em" class="m-icon m-icon-button__icon">
        <use aria-hidden="true"></use>
      </svg> </button>
  </div>
</div>
`;
